@@ -4,9 +4,10 @@ EXTRA_DIST = all74_1.sch all_1.sch buses.sch embedded_1.sch ext_chars.sch \
              states_1.sch type_test.sch oldsym.sym oldsym2.sym \
 	     alignment.sch rotation.sch arc.sch multiline.sch multiline2.sch \
 	     multiline3.sch multiline4.sch attributes.sch versionsym1.sch \
-             versionsym2.sch versionsym3.sch versionsym_basic.sym 
-	     versionsym_invalid.sym versionsym_major.sym versionsym_minor.sym 
-	     versionsym_minor2.sym missing.sch \
+             versionsym2.sch versionsym3.sch versionsym_basic.sym \
+	     versionsym_invalid.sym versionsym_major.sym versionsym_minor.sym \
+	     versionsym_minor2.sym missing.sch autonumber.sch \
+	     autonumber_sub1.sch autonumber_sub2.sch autonumber_sub_sub1.sch \
 	     gafrc
 
 MOSTLYCLEANFILES =	*.log *~
