@@ -1,3 +1,7 @@
+2005-03-06 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* tests/Makefile.am: Added missing files to EXTRA_DIST
+
 2005-03-05 Werner Hoch <werner.ho@gmx.de>
 	* noweb/x_dialog.nw: changed the autonumber_text dialog
 	* noweb/o_misc.nw: changed functions which support the autonumber 
